executor-application/configs/src/main/resources/distr/k8s/base/istio/config/ingress/ingress-ef.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ingressgateway-router-executor-unver
spec:
  workloadSelector:
    labels:
      app: istio-ingressgateway-router-executor-unver
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
          portNumber: 11443
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.rbac
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
            rules:
              action: ALLOW
              policies:
                client-cert-policy:
                  permissions:
                    - or_rules:
                        rules:
                          - header:
                              name: ':path'
                              prefix_match: /
                  principals:
                    - or_ids:
                        ids:
                          - header:
                              name: x-forwarded-client-cert
                              safe_regex_match:
                                google_re2:
                                  max_program_size: 200
                                regex: ${router-executor.ctr.istio.ingress.envoy_filter.regex_match.client.cn}
