executor-application/configs/src/main/resources/distr/k8s/base/istio/config/ingress/ingress-mtls-@config-fp-name1@-dsr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ingressgateway-mtls-@config-fp-name1@-unver
spec:
  exportTo:
    - .
  host: @config-fp-name1@-${distrib.release.version}
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: UFS-SESSION
          ttl: 0s
    outlierDetection:
      consecutive5xxErrors: ${@fpi-name@.ose.istio.ingress.dsr.spec.trafficPolicy.outlierDetection.consecutive5xxErrors}
      baseEjectionTime: ${@fpi-name@.ose.istio.ingress.dsr.spec.trafficPolicy.outlierDetection.baseEjectionTime}
      interval: ${@fpi-name@.ose.istio.ingress.dsr.spec.trafficPolicy.outlierDetection.interval}
      maxEjectionPercent: ${@fpi-name@.ose.istio.ingress.dsr.spec.trafficPolicy.outlierDetection.maxEjectionPercent}
