executor-application/configs/src/main/resources/distr/k8s/base/istio/config/ingress/ingress-mtls-@config-fp-name1@-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingressgateway-mtls-@config-fp-name1@-unver
spec:
  exportTo:
    - .
  gateways:
    - ingressgateway-mtls-@fpi-name@-unver
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /@server.context.path1@
        - uri:
            prefix: /healthcheck/service-healthcheck/@deploymentUnit1@
      route:
        - destination:
            host: @config-fp-name1@-${distrib.release.version}
            port:
              number: 8080
