executor-application/configs/src/main/resources/distr/k8s/base/istio/config/ingress/ingress-mtls-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingressgateway-mtls-router-executor-unver
spec:
  exportTo:
    - .
  gateways:
    - ingressgateway-mtls-router-executor-unver
  hosts:
    - ${router-executor.ctr.istio.ingress.route.spec.host.router-executor.appFQDN}
  http:
    - match:
        - uri:
            prefix: /router-executor
      route:
        - destination:
            host: router-executor-${distrib.release.version}
            port:
              number: 8080
